--- a/src/sass/elements/_prose.scss
+++ b/src/sass/elements/_prose.scss
@@ -1,4 +1,4 @@
-.prose {
+.markdown .prose {
 	// --tw-prose-code: currentColor !important; // Code text in markdown
 	// --tw-prose-bold: currentColor !important; // Bold text in markdown
 	font-size: 1rem !important;
